name:                subtype-fuzzer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/prl-prg/subtype-fuzzer
license:             BSD3
license-file:        LICENSE
author:              Artem Pelenityn
maintainer:          a.pelenitsyn@gmail.com
copyright:           Copyright (c) 2018 Artem Pelenitsyn
category:            research
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable fuzzer
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Mutation, QModel, SModel
  build-depends:       base,
                       testing-feat,
                       wl-pprint-annotated,
                       containers,
                       transformers,
                       pointless-haskell,
                       HaskellForMaths

